--- a/RecipeWEB/appsettings.Development.json
+++ b/RecipeWEB/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": "Server=LENOVOT14;Database=recipe; Trusted_Connection=True;TrustServerCertificate=True;"
+  "ConnectionString": "Server=LENOVOT14;Database=recipe22; Trusted_Connection=True;TrustServerCertificate=True;"
 }
