--- a/RecipeWEB/RecipeWEB.csproj
+++ b/RecipeWEB/RecipeWEB.csproj
@@ -17,6 +17,11 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+	  <PackageReference Include="Mapster" Version="7.4.0" />
+	  <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
+	  <PackageReference Include="MailKit" Version="3.1.1" />
+	  <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.2" />
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
   </ItemGroup>
-
 </Project>
